Changed font size to prevent container wrap of 5 day cards

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -82,7 +82,7 @@ p {
     color: white;
     padding: .7em;
     padding-left: .5em;
-    font-size: small;
+    font-size: 70%;
 }
 
 #uv-index-span{
